--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               </div>
 
               <div class="bg-primary/10 p-6 rounded-lg">
-                <h3 class="text-xl font-bold text-primary-dark dark:text-text-dark mb-3">💎 ¿Cómo funciona?</h3>
+                <h3 class="text-xl font-bold text-primary-dark dark:text-text-dark mb-3">¿Cómo funciona?</h3>
                 <ol class="text-left text-primary-dark dark:text-text-dark space-y-2 mb-4 max-w-md mx-auto">
                   <li>1. Encuentra materiales que te gusten</li>
                   <li>2. Compra los materiales por Amazon</li>
@@ -160,7 +160,6 @@
                 </ol>
                 <a href="https://www.instagram.com/magabvdreams?igsh=MTAzOHh0emtvNWdoYQ==" target="_blank"
                   class="inline-flex items-center gap-2 bg-gradient-to-r from-purple-500 to-pink-500 hover:from-purple-600 hover:to-pink-600 text-white font-bold py-3 px-6 rounded-lg transition-all duration-200 transform hover:scale-105">
-                  <span>📱</span>
                   Contáctanos en Instagram
                 </a>
               </div>
@@ -309,10 +308,10 @@
                       class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 bg-background-light dark:bg-gray-700 text-text-light dark:text-text-dark focus:ring-2 focus:ring-primary focus:border-transparent"
                       required>
                       <option value="" disabled selected>Selecciona un candidato</option>
-                      <option value="collar_celeste">🌟 Collar Celeste</option>
-                      <option value="anillo_dorado_sol">☀️ Anillo Dorado Sol</option>
-                      <option value="aretas_perla">💎 Aretes de Perla</option>
-                      <option value="pulsera_cuarzo">🔮 Pulsera de Cuarzo</option>
+                      <option value="collar_celeste">Collar Celeste</option>
+                      <option value="anillo_dorado_sol">Anillo Dorado Sol</option>
+                      <option value="aretas_perla">Aretes de Perla</option>
+                      <option value="pulsera_cuarzo">Pulsera de Cuarzo</option>
                     </select>
                   </div>
 
