--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
                 <div>
                   <p class="text-text-light dark:text-text-dark text-base font-medium leading-normal mt-3">Nuestra
                     Artesana</p>
-                  <p class="text-primary dark:text-gray-400 text-sm font-normal leading-normal">Conoce la historia y la
-                    inspiración detrás de cada creación.</p>
+                  <p class="text-primary dark:text-gray-400 text-sm font-normal leading-normal">Conoce los distintos diseños que hemos realizado</p>
                 </div>
               </div>
             </div>
